# dyag

./: .gitignore  BUILD_SUMMARY.md  CHANGELOG.md  CHANGELOG_FINETUNING.md  CHANGELOG_RAG.md  CONTRIBUTING.md  CORRECTIONS_TESTS_RAG.md  DOCUMENTATION_FIXES_REPORT.md  FINETUNING_TEST_RESULTS.md  FINETUNING_WORKFLOW.md  INTEGRATION_ENCODING_RAPPORT.md  LLAMA_ACCESS_GUIDE.md  MCP_INTEGRATION.md  MCP_INTEGRATION_SUMMARY.md  MCP_SETUP.md  RAG_SESSION_SUMMARY.md  RAG_WORKFLOW_10APPS.md  RAPPORT_EVALUATION_RAG_10APPS.md  RAPPORT_FINAL_PHASE1.md  README.md  RELEASE_COMPLETE.txt  RELEASE_NOTES_v0.2.0-rc.1.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v2.0.0.md  RELEASE_PREPARATION_SUMMARY.md  RELEASE_SUMMARY.md  REORGANISATION_ENCODING_RAPPORT.md  SESSION_FINALE_2026-01-01.md  SESSION_RECAP_2024-12-28.md  SESSION_SUMMARY_2025-12-20.md  SPEC_GENERATE_QUESTIONS.md  TESTING_GUIDE.md  TEST_REPORT.md  analyse.md  build_package.bat  pyproject.toml  requirements-rag.txt  run_tests.bat  run_tests.sh
.claude/: claude.md
doc/: ENCODAGE_README.md  FINETUNING_WORKFLOW_GUIDE.md  GUIDE_ENCODAGE_EMOJIS.md  RAG_WORKFLOW_GUIDE.md  RAG_WORKFLOW_JOURNAL.md  README.md
doc/Development/: Commitizen-Guide.md  Conda-Environment.md  RAG-Chunks-Notes.md  Versioning-Guide.md
doc/Fine-Tuning/: Fine-Tuning-Guide.md  RAG-FineTuning-Architecture.md
doc/Getting-Started/: Installation-Setup.md  Quick-Start-Guide.md
doc/RAG-System/: Create-RAG-Guide.md  RAG-Architecture.puml  RAG-Checklist.md  RAG-Modules-Guide.md  RAG-Quick-Start.md  RAG-System-Overview.md
doc/RAG-System/Chunking/: Chunking-Algorithm.md  Chunking-Comparison.md  Chunking-Management.md  Chunking-Strategy.md
doc/Tools/: Claude-Guide.md  Create-RAG-Tool.md  MCP-Guide.md  MD2HTML-Comparison.md  ParkJSON-Tools.md
doc/analysis/: project_analysis.md
evaluation/: questions_10apps_finetuning.jsonl  questions_10apps_rag.jsonl  questions_10apps_simple.jsonl  test_questions_sample.jsonl
examples/: fix_emoji_corruption.py
src/dyag/: __init__.py  __main__.py  llm_providers.py  main.py  mcp_server.py  rag_query.py
src/dyag/analysis/commands/: MD2PROJECT_README.md  __init__.py  fix_encoding.py  md2project.py
src/dyag/analysis/core/: __init__.py  encoding_fixer.py  md2project_parser.py
src/dyag/commands/: __init__.py  add_toc.py  compresspdf.py  concat_html.py  create_rag.py  evaluate_rag.py  flatten_wikisi.py  generate_evaluation_report.py  generate_questions.py  html2md.py  html2pdf.py  img2pdf.py  index_rag.py  make_interactive.py  markdown_to_rag.py  md2html.py  parkjson2json.py  parkjson2md.py  prepare_rag.py  project2md.py  query_rag.py
src/dyag/encoding/: README.md  __init__.py
src/dyag/encoding/commands/: __init__.py  chk_utf8.py  fix_utf8.py
src/dyag/encoding/core/: __init__.py  checker.py  fixer.py
src/dyag/finetuning/: __init__.py
src/dyag/finetuning/commands/: __init__.py  compare_models.py  evaluate_finetuned.py  finetune.py  generate_training.py  query_finetuned.py
src/dyag/finetuning/core/: __init__.py  dataset_generators.py  model_registry.py  trainer.py  trainer_temp.py
src/dyag/question_generators/: __init__.py  formatters.py  parser.py  template_generator.py  templates.py
src/dyag/rag/: report_generator.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: test_create_rag.py  test_llm_provider.py  test_rag_simple.py  test_rag_vivacite.py
tests/unit/: __init__.py
tests/unit/analysis/commands/: test_md2project.py
tests/unit/analysis/core/: test_md2project_parser.py
tests/unit/commands/: __init__.py  test_add_toc.py  test_flatten_wikisi.py  test_html2md.py  test_html2pdf.py  test_make_interactive.py  test_md2html.py  test_project2md.py
tests/unit/encoding/: __init__.py  test_chk_utf8.py  test_encoding_commands.py  test_fix_utf8.py
tests/unit/rag/core/: test_comparison.py  test_llm_providers.py  test_retriever.py
