[tool.poetry]
name = "dyag"
version = "2.0.0"
description = "Dyag - Document processing toolkit with RAG, Fine-Tuning, and diagram support"
authors = ["MARCHAL Hervé <herve.marchal@developpement-durable.gouv.fr>"]
readme = "README.md"
packages = [{include = "dyag", from = "src"}]

[tool.poetry.scripts]
dyag = "dyag.main:main"
dyag-mcp = "dyag.mcp_server:main"

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^10.0.0"
PyMuPDF = "^1.23.0"
playwright = "^1.40.0"
markdown = "^3.5"

# RAG dependencies (optional)
chromadb = {version = "^0.4.22", optional = true}
sentence-transformers = {version = "^2.3.1", optional = true}
openai = {version = ">=1.20", optional = true}
anthropic = {version = ">=0.34.0", optional = true}
langchain = {version = "^0.1.9", optional = true}
langchain-openai = {version = "^0.0.6", optional = true}
langchain-community = {version = "^0.0.24", optional = true}
tiktoken = {version = "^0.7.0", optional = true}
pydantic = {version = "^2.6.1", optional = true}
python-dotenv = {version = "^1.0.1", optional = true}
loguru = {version = "^0.7.2", optional = true}
streamlit = {version = "^1.31.1", optional = true}

# Fine-tuning dependencies (optional)
torch = {version = "^2.0.0", optional = true}
transformers = {version = "^4.36.0", optional = true}
datasets = {version = "^2.14.0", optional = true}
peft = {version = "^0.7.0", optional = true}
trl = {version = "^0.7.4", optional = true}
accelerate = {version = "^0.24.0", optional = true}
bitsandbytes = {version = "^0.41.0", optional = true}
sentencepiece = {version = "^0.1.99", optional = true}
protobuf = {version = "^3.20.0", optional = true}

[tool.poetry.extras]
rag = [
    "chromadb",
    "sentence-transformers",
    "openai",
    "anthropic",
    "langchain",
    "langchain-openai",
    "langchain-community",
    "tiktoken",
    "pydantic",
    "python-dotenv",
    "loguru",
    "streamlit"
]
finetuning = [
    "torch",
    "transformers",
    "datasets",
    "peft",
    "trl",
    "accelerate",
    "bitsandbytes",
    "sentencepiece",
    "protobuf"
]
all = [
    "chromadb",
    "sentence-transformers",
    "openai",
    "anthropic",
    "langchain",
    "langchain-openai",
    "langchain-community",
    "tiktoken",
    "pydantic",
    "python-dotenv",
    "loguru",
    "streamlit",
    "torch",
    "transformers",
    "datasets",
    "peft",
    "trl",
    "accelerate",
    "bitsandbytes",
    "sentencepiece",
    "protobuf"
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
pytest-mock = "^3.10"
black = "^23.0"
flake8 = "^6.0"
commitizen = "^4.10.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.7.0"
version_files = [
    "pyproject.toml:version",
    "src/dyag/__init__.py:__version__"
]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
